# ai-hot-topics

./: .env.example  .gitignore  README.md  keywords.yaml  pyproject.toml  scoring.yaml  sources.yaml
docs/: index.html
docs/data/: candidates.json
prompts/: codex_automation_daily_outbox_prompt.txt  short_video_outline.md
scripts/: browser_login_bootstrap.py  export_pages_data.py  install_dashboard_launchd.sh  install_feishu_webhook_dispatch.sh  install_launchd.sh  install_pages_publish_launchd.sh  publish_pages_snapshot.sh  send_outbox_to_feishu.py
src/ai_hot_topics/: __init__.py  cli.py  config.py  dashboard.py  feishu_webhook.py  models.py  pipeline.py  storage.py  utils.py
src/ai_hot_topics/collectors/: __init__.py  base.py  browser_base.py  douyin.py  huitun.py  x.py  xiaohongshu.py  youtube.py
src/ai_hot_topics/generators/: __init__.py  base.py  mock_provider.py  openai_provider.py  service.py
src/ai_hot_topics/processing/: __init__.py  cluster.py  normalize.py  scoring.py
src/ai_hot_topics/sync/: __init__.py  feishu.py
tests/: test_clustering_scoring.py  test_config.py  test_dashboard_service.py  test_feishu_webhook.py  test_generation.py  test_huitun_collector.py  test_pipeline_smoke.py  test_storage_and_sync.py  test_support.py  test_xiaohongshu_collector.py
